--- a/view/estimate.html
+++ b/view/estimate.html
@@ -28,7 +28,7 @@
             <div class="content-block">
                 <div class="container-fluid">
                     <div class="sales">
-                        <img class="img" src="https://fuss10.elemecdn.com/c/f5/d0b0f2fc83f3ac3e4a0cfae891256png.png?imageMogr/format/webp/thumbnail/!60x60r/gravity/Center/crop/60x60/">
+                        <img class="img" src="../image/logo.png">
                         <div class="info">
                             <div class="name">美团外卖</div>
                             <div class="time">2月2日19:20 左右送达</div>
