--- a/view/shopInfo.html
+++ b/view/shopInfo.html
@@ -167,7 +167,7 @@
                     <ul class="comment-text">
                         <li>
                             <div class="comment-block">
-                                <img class="head-img" src="https://fuss10.elemecdn.com/c/f5/d0b0f2fc83f3ac3e4a0cfae891256png.png?imageMogr/format/webp/thumbnail/!60x60r/gravity/Center/crop/60x60/">
+                                <img class="head-img" src="../image/logo.png">
                                 <div class="comment-block-info">
                                     <div class="person">
                                         <h3>匿名用户</h3>
@@ -196,7 +196,7 @@
                         </li>
                         <li>
                             <div class="comment-block">
-                                <img class="head-img" src="https://fuss10.elemecdn.com/c/f5/d0b0f2fc83f3ac3e4a0cfae891256png.png?imageMogr/format/webp/thumbnail/!60x60r/gravity/Center/crop/60x60/">
+                                <img class="head-img" src="../image/logo.png">
                                 <div class="comment-block-info">
                                     <div class="person">
                                         <h3>匿名用户</h3>
