--- a/view/shopInfo.html
+++ b/view/shopInfo.html
@@ -16,6 +16,12 @@
     <link rel="stylesheet" href="../css/base.css">
 
     <link rel="stylesheet"  href="../css/shopInfo.css">
+    <style type="text/css">
+        .fixed_on{
+            position: fixed;
+            z-index: 999;
+        }
+    </style>
 </head>
 
 <body>
@@ -71,6 +77,36 @@
                         <span class="cate-list fir limit-text" data-id="552">特色炒面</span>
                     </div>
                     <div class="fir-cate">
+                        <span class="cate-list fir limit-text" data-id="551">特色炒饭</span>
+                    </div>
+                    <div class="fir-cate">
+                        <span class="cate-list fir limit-text" data-id="552">特色炒面</span>
+                    </div>
+                    <div class="fir-cate">
+                        <span class="cate-list fir limit-text" data-id="551">特色炒饭</span>
+                    </div>
+                    <div class="fir-cate">
+                        <span class="cate-list fir limit-text" data-id="552">特色炒面</span>
+                    </div>
+                    <div class="fir-cate">
+                        <span class="cate-list fir limit-text" data-id="551">特色炒饭</span>
+                    </div>
+                    <div class="fir-cate">
+                        <span class="cate-list fir limit-text" data-id="552">特色炒面</span>
+                    </div>
+                    <div class="fir-cate">
+                        <span class="cate-list fir limit-text" data-id="551">特色炒饭</span>
+                    </div>
+                    <div class="fir-cate">
+                        <span class="cate-list fir limit-text" data-id="552">特色炒面</span>
+                    </div>
+                    <div class="fir-cate">
+                        <span class="cate-list fir limit-text" data-id="551">特色炒饭</span>
+                    </div>
+                    <div class="fir-cate">
+                        <span class="cate-list fir limit-text" data-id="552">特色炒面</span>
+                    </div>
+                    <div class="fir-cate">
                             <span class="cate-list fir limit-text" data-id="85">冰纷圣代</span>
                             <div class="sec-cate">
                                 <span class="cate-list sec limit-text" data-id="86">小青菜</span>
@@ -95,7 +131,7 @@
                                 <span class="dining-price">
                                 <i class="icon iconfont">&#xe604;</i>12</span>/份
                             </div>
-                            <div class="dining-info sale-quantity">售出22份</div>
+                            <div class="dining-info sale-quantity">月售22份</div>
                         </a>
                         <div class="dining-btn">
                             <span class="minus" data-id="'+id+'"><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num" data-id="'+id+'">100</span><span class="add" data-id="'+id+'"><i class="icon iconfont">&#xe6ce;</i></span>
@@ -109,7 +145,204 @@
                                 <span class="dining-price">
                                 <i class="icon iconfont">&#xe604;</i>15</span>/份
                             </div>
-                            <div class="dining-info sale-quantity">售出25份</div>
+                            <div class="dining-info sale-quantity">月售25份</div>
+                        </a>
+                        <div class="dining-btn">
+                            <span class="minus hidden" data-id="'+id+'"><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num hidden" data-id="'+id+'">0</span><span class="add" data-id="'+id+'"><i class="icon iconfont">&#xe6ce;</i></span>
+                        </div>
+                    </div>
+                    <div class="dining-list">
+                        <a href="./goodsDetail.html?c=dining&a=goodsDetail&gid='+id+'&shop_id='+shop_id+'">
+                            <img src="../image/20170523113702284_thumb.jpg" class="dining-img"/>
+                            <div class="dining-name limit-text">木耳炒肉</div>
+                            <div class="dining-info">
+                                <span class="dining-price">
+                                <i class="icon iconfont">&#xe604;</i>15</span>/份
+                            </div>
+                            <div class="dining-info sale-quantity">月售25份</div>
+                        </a>
+                        <div class="dining-btn">
+                            <span class="minus hidden" data-id="'+id+'"><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num hidden" data-id="'+id+'">0</span><span class="add" data-id="'+id+'"><i class="icon iconfont">&#xe6ce;</i></span>
+                        </div>
+                    </div>
+                    <div class="dining-list">
+                        <a href="./goodsDetail.html?c=dining&a=goodsDetail&gid='+id+'&shop_id='+shop_id+'">
+                            <img src="../image/20170523113702284_thumb.jpg" class="dining-img"/>
+                            <div class="dining-name limit-text">木耳炒肉</div>
+                            <div class="dining-info">
+                                <span class="dining-price">
+                                <i class="icon iconfont">&#xe604;</i>15</span>/份
+                            </div>
+                            <div class="dining-info sale-quantity">月售25份</div>
+                        </a>
+                        <div class="dining-btn">
+                            <span class="minus hidden" data-id="'+id+'"><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num hidden" data-id="'+id+'">0</span><span class="add" data-id="'+id+'"><i class="icon iconfont">&#xe6ce;</i></span>
+                        </div>
+                    </div>
+
+                    <div class="dining-list">
+                        <a href="./goodsDetail.html?c=dining&a=goodsDetail&gid='+id+'&shop_id='+shop_id+'">
+                            <img src="../image/20170523113702284_thumb.jpg" class="dining-img"/>
+                            <div class="dining-name limit-text">木耳炒肉</div>
+                            <div class="dining-info">
+                                <span class="dining-price">
+                                <i class="icon iconfont">&#xe604;</i>15</span>/份
+                            </div>
+                            <div class="dining-info sale-quantity">月售25份</div>
+                        </a>
+                        <div class="dining-btn">
+                            <span class="minus hidden" data-id="'+id+'"><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num hidden" data-id="'+id+'">0</span><span class="add" data-id="'+id+'"><i class="icon iconfont">&#xe6ce;</i></span>
+                        </div>
+                    </div>
+                    <div class="dining-list">
+                        <a href="./goodsDetail.html?c=dining&a=goodsDetail&gid='+id+'&shop_id='+shop_id+'">
+                            <img src="../image/20170523113702284_thumb.jpg" class="dining-img"/>
+                            <div class="dining-name limit-text">木耳炒肉</div>
+                            <div class="dining-info">
+                                <span class="dining-price">
+                                <i class="icon iconfont">&#xe604;</i>15</span>/份
+                            </div>
+                            <div class="dining-info sale-quantity">月售25份</div>
+                        </a>
+                        <div class="dining-btn">
+                            <span class="minus hidden" data-id="'+id+'"><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num hidden" data-id="'+id+'">0</span><span class="add" data-id="'+id+'"><i class="icon iconfont">&#xe6ce;</i></span>
+                        </div>
+                    </div>
+                    <div class="dining-list">
+                        <a href="./goodsDetail.html?c=dining&a=goodsDetail&gid='+id+'&shop_id='+shop_id+'">
+                            <img src="../image/20170523113702284_thumb.jpg" class="dining-img"/>
+                            <div class="dining-name limit-text">木耳炒肉</div>
+                            <div class="dining-info">
+                                <span class="dining-price">
+                                <i class="icon iconfont">&#xe604;</i>15</span>/份
+                            </div>
+                            <div class="dining-info sale-quantity">月售25份</div>
+                        </a>
+                        <div class="dining-btn">
+                            <span class="minus hidden" data-id="'+id+'"><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num hidden" data-id="'+id+'">0</span><span class="add" data-id="'+id+'"><i class="icon iconfont">&#xe6ce;</i></span>
+                        </div>
+                    </div>
+                    <div class="dining-list">
+                        <a href="./goodsDetail.html?c=dining&a=goodsDetail&gid='+id+'&shop_id='+shop_id+'">
+                            <img src="../image/20170523113702284_thumb.jpg" class="dining-img"/>
+                            <div class="dining-name limit-text">木耳炒肉</div>
+                            <div class="dining-info">
+                                <span class="dining-price">
+                                <i class="icon iconfont">&#xe604;</i>15</span>/份
+                            </div>
+                            <div class="dining-info sale-quantity">月售25份</div>
+                        </a>
+                        <div class="dining-btn">
+                            <span class="minus hidden" data-id="'+id+'"><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num hidden" data-id="'+id+'">0</span><span class="add" data-id="'+id+'"><i class="icon iconfont">&#xe6ce;</i></span>
+                        </div>
+                    </div>
+                    <div class="dining-list">
+                        <a href="./goodsDetail.html?c=dining&a=goodsDetail&gid='+id+'&shop_id='+shop_id+'">
+                            <img src="../image/20170523113702284_thumb.jpg" class="dining-img"/>
+                            <div class="dining-name limit-text">木耳炒肉</div>
+                            <div class="dining-info">
+                                <span class="dining-price">
+                                <i class="icon iconfont">&#xe604;</i>15</span>/份
+                            </div>
+                            <div class="dining-info sale-quantity">月售25份</div>
+                        </a>
+                        <div class="dining-btn">
+                            <span class="minus hidden" data-id="'+id+'"><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num hidden" data-id="'+id+'">0</span><span class="add" data-id="'+id+'"><i class="icon iconfont">&#xe6ce;</i></span>
+                        </div>
+                    </div>
+                    <div class="dining-list">
+                        <a href="./goodsDetail.html?c=dining&a=goodsDetail&gid='+id+'&shop_id='+shop_id+'">
+                            <img src="../image/20170523113702284_thumb.jpg" class="dining-img"/>
+                            <div class="dining-name limit-text">木耳炒肉</div>
+                            <div class="dining-info">
+                                <span class="dining-price">
+                                <i class="icon iconfont">&#xe604;</i>15</span>/份
+                            </div>
+                            <div class="dining-info sale-quantity">月售25份</div>
+                        </a>
+                        <div class="dining-btn">
+                            <span class="minus hidden" data-id="'+id+'"><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num hidden" data-id="'+id+'">0</span><span class="add" data-id="'+id+'"><i class="icon iconfont">&#xe6ce;</i></span>
+                        </div>
+                    </div>
+                    <div class="dining-list">
+                        <a href="./goodsDetail.html?c=dining&a=goodsDetail&gid='+id+'&shop_id='+shop_id+'">
+                            <img src="../image/20170523113702284_thumb.jpg" class="dining-img"/>
+                            <div class="dining-name limit-text">木耳炒肉</div>
+                            <div class="dining-info">
+                                <span class="dining-price">
+                                <i class="icon iconfont">&#xe604;</i>15</span>/份
+                            </div>
+                            <div class="dining-info sale-quantity">月售25份</div>
+                        </a>
+                        <div class="dining-btn">
+                            <span class="minus hidden" data-id="'+id+'"><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num hidden" data-id="'+id+'">0</span><span class="add" data-id="'+id+'"><i class="icon iconfont">&#xe6ce;</i></span>
+                        </div>
+                    </div>
+                    <div class="dining-list">
+                        <a href="./goodsDetail.html?c=dining&a=goodsDetail&gid='+id+'&shop_id='+shop_id+'">
+                            <img src="../image/20170523113702284_thumb.jpg" class="dining-img"/>
+                            <div class="dining-name limit-text">木耳炒肉</div>
+                            <div class="dining-info">
+                                <span class="dining-price">
+                                <i class="icon iconfont">&#xe604;</i>15</span>/份
+                            </div>
+                            <div class="dining-info sale-quantity">月售25份</div>
+                        </a>
+                        <div class="dining-btn">
+                            <span class="minus hidden" data-id="'+id+'"><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num hidden" data-id="'+id+'">0</span><span class="add" data-id="'+id+'"><i class="icon iconfont">&#xe6ce;</i></span>
+                        </div>
+                    </div>
+                    <div class="dining-list">
+                        <a href="./goodsDetail.html?c=dining&a=goodsDetail&gid='+id+'&shop_id='+shop_id+'">
+                            <img src="../image/20170523113702284_thumb.jpg" class="dining-img"/>
+                            <div class="dining-name limit-text">木耳炒肉</div>
+                            <div class="dining-info">
+                                <span class="dining-price">
+                                <i class="icon iconfont">&#xe604;</i>15</span>/份
+                            </div>
+                            <div class="dining-info sale-quantity">月售25份</div>
+                        </a>
+                        <div class="dining-btn">
+                            <span class="minus hidden" data-id="'+id+'"><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num hidden" data-id="'+id+'">0</span><span class="add" data-id="'+id+'"><i class="icon iconfont">&#xe6ce;</i></span>
+                        </div>
+                    </div>
+                    <div class="dining-list">
+                        <a href="./goodsDetail.html?c=dining&a=goodsDetail&gid='+id+'&shop_id='+shop_id+'">
+                            <img src="../image/20170523113702284_thumb.jpg" class="dining-img"/>
+                            <div class="dining-name limit-text">木耳炒肉</div>
+                            <div class="dining-info">
+                                <span class="dining-price">
+                                <i class="icon iconfont">&#xe604;</i>15</span>/份
+                            </div>
+                            <div class="dining-info sale-quantity">月售25份</div>
+                        </a>
+                        <div class="dining-btn">
+                            <span class="minus hidden" data-id="'+id+'"><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num hidden" data-id="'+id+'">0</span><span class="add" data-id="'+id+'"><i class="icon iconfont">&#xe6ce;</i></span>
+                        </div>
+                    </div>
+                    <div class="dining-list">
+                        <a href="./goodsDetail.html?c=dining&a=goodsDetail&gid='+id+'&shop_id='+shop_id+'">
+                            <img src="../image/20170523113702284_thumb.jpg" class="dining-img"/>
+                            <div class="dining-name limit-text">木耳炒肉</div>
+                            <div class="dining-info">
+                                <span class="dining-price">
+                                <i class="icon iconfont">&#xe604;</i>15</span>/份
+                            </div>
+                            <div class="dining-info sale-quantity">月售25份</div>
+                        </a>
+                        <div class="dining-btn">
+                            <span class="minus hidden" data-id="'+id+'"><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num hidden" data-id="'+id+'">0</span><span class="add" data-id="'+id+'"><i class="icon iconfont">&#xe6ce;</i></span>
+                        </div>
+                    </div>
+                    <div class="dining-list">
+                        <a href="./goodsDetail.html?c=dining&a=goodsDetail&gid='+id+'&shop_id='+shop_id+'">
+                            <img src="../image/20170523113702284_thumb.jpg" class="dining-img"/>
+                            <div class="dining-name limit-text">木耳炒肉</div>
+                            <div class="dining-info">
+                                <span class="dining-price">
+                                <i class="icon iconfont">&#xe604;</i>15</span>/份
+                            </div>
+                            <div class="dining-info sale-quantity">月售25份</div>
                         </a>
                         <div class="dining-btn">
                             <span class="minus hidden" data-id="'+id+'"><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num hidden" data-id="'+id+'">0</span><span class="add" data-id="'+id+'"><i class="icon iconfont">&#xe6ce;</i></span>
@@ -573,11 +806,29 @@
         <a class="btn-confirm-oper btn-left" href="javascript:;">确定</a>
         <a class="btn-cancel-oper btn-right" href="javascript:;">取消</a>
     </div>
-</div>    <!--公用js文件-->
-    <script src="../js/jquery-1.11.0.js"></script>
-
-<script src="../js/page.js"></script>
-<script src="../js/common.js"></script>
-    <script type="text/javascript" src="../js/shopInfo.js"></script>
+</div>
 </body>
+<script src="../js/jquery-1.11.0.js"></script>
+<script src="../js/page.js" type="text/javascript"></script>
+<script src="../js/common.js" type="text/javascript"></script>
+<script type="text/javascript" src="../js/shopInfo.js"></script>
+<script type="text/javascript">
+    var $bannerTap = $('.banner-tap');
+    var tapTop = $bannerTap.offset().top;
+    var tapHeight = $bannerTap.height();
+    var bottomNavHeight = $('.bottomNav').height();
+    $(window).scroll(function(){
+        var scrollTop = $(window).scrollTop();
+        if(tapTop <= scrollTop){
+            var height = $(window).height() - tapHeight - bottomNavHeight;
+            $bannerTap.addClass('fixed_on');
+            $('.dining-area').css({'overflow-y': 'scroll', 'height': height});
+            $('.cate-area').css({'overflow-y': 'scroll', 'height': height});
+        } else {
+            $bannerTap.removeClass('fixed_on');
+            $('.dining-area').css({'overflow-y': 'hidden', 'height': 'auto'});
+            $('.cate-area').css({'overflow-y': 'hidden', 'height': 'auto'});
+        }
+    })
+</script>
 </html>
