--- a/view/exchange.html
+++ b/view/exchange.html
@@ -50,7 +50,10 @@
                 <div class="info">
                     需要<span id="need-coin">100</span>积分
                  </div>
-                <div class="recharge-btn" data-name="">立即兑换</div>
+                <div style="text-align: center;">
+                    <div class="recharge-btn" data-name="">立即兑换</div>
+                </div>
+
                 <div class="my-points text-right">
                      <i class="icon iconfont icon-jifen"></i>我的积分：<span>10</span>
                 </div>
