--- a/css/exchange.css
+++ b/css/exchange.css
@@ -37,11 +37,11 @@
 }
 .badge{
     display: inline-block;
-    min-width: 10px;
-    padding: 2px 5px;
+    width: 20px;
+    height: 20px;
     font-size: 5px;
     font-weight: 700;
-    line-height: 1;
+    line-height: 15px;
     color: #fff;
     text-align: center;
     white-space: nowrap;
