--- a/view/goodsDetail.html
+++ b/view/goodsDetail.html
@@ -33,7 +33,7 @@
                 <div class="swiper-wrapper">
 
                     <div class="swiper-slide">
-                       <img src="../image/20170718134433734.jpg">
+                       <img src="../image/20170718134433735.jpg">
                     </div>
                 <!-- 如果需要分页器 -->
                 </div>
@@ -41,8 +41,8 @@
             <div class="goods-info">
                 <input type="hidden" id="standard" value="">
                 <div class="desc">
-                    <span class="name">【辣椒炒肉】</span>
-                    <span class="simple_desc"></span>
+                    <span class="name">【澳洲鲍鱼】</span>
+                    <span class="simple_desc">( 5头 )</span>
                 </div>
                 <div class="price">
                     <span class="inventory-area-wrap">
@@ -65,8 +65,8 @@
                     </div>
                 </div>
                 <div class="price">
-                    <span class="price-goods"></span><i class="icon iconfont">&#xe604;</i><span class="price-value" data-price="">12</span>/份
-                    <span class="ori-price-info">原价<i class="icon iconfont">&#xe604;</i><span class="ori-price">13.5</span></span>
+                    <span class="price-goods"></span><i class="icon iconfont">&#xe604;</i><span class="price-value" data-price="">139</span>/份
+                    <span class="ori-price-info">原价<i class="icon iconfont">&#xe604;</i><span class="ori-price">200</span></span>
                 </div>
 
             </div>
@@ -78,15 +78,21 @@
             <div class="goodsDetail-info-wrap clearfix" id="self">
                 <div class="goodsDetail-nav-wrap">
                     <div class="goodsDetail-info-nav clearfix">
-                        <a href="#self" class="item buy-area active"  data-num=1>商品描述</a>
+                        <a href="#self" class="item buy-area active"  data-num=1>商品详情</a>
                     </div>
                 </div>
 
                 <!--商品详情-->
                 <div class="goodsDetail-desc">
-                    <p class="text-muted">
-                    温馨提示：图片仅供参考，请以实物为准；高峰时段及恶劣环境，请提前下单。
+                    <p>主菜：<span>澳洲鲍鱼( 5头 )</span></p>
+                    <p>配菜：<span>娃娃菜、葱、蒜</span></p>
+                    <p>主要食材明细：鲍鱼5头、大葱2根、生姜一个、小米椒5支、二锅头5斤</p>
+                    <p class="reminder red">
+                        温馨提示：图片仅供参考，请以实物为准；高峰时段及恶劣环境，请提前下单。
                     </p>
+                    <div class="show-img">
+                        <img src="../image/20170718134433735.jpg">
+                    </div>
                 </div>
             </div>
         </div>
@@ -97,11 +103,11 @@
         </div>
         <!--购物车-->
         <div class="cart-wrap">
-    <div class="img">
-        <i class="icon iconfont">&#xe6c4;</i>
-    </div>
-    <div class="num">0</div>
-</div>
+            <div class="img">
+                <i class="icon iconfont">&#xe6c4;</i>
+            </div>
+            <div class="num">0</div>
+        </div>
 
 <!--首页购物车列表-->
 <div class="cartList-wrap" style="display: none;">
@@ -117,8 +123,8 @@
                 </thead>
                 <tbody class="cart-goods-list">
                         <tr>
-                            <td class="col-1">辣椒炒肉</td>
-                            <td class="col-2"><i class="icon iconfont">&#xe604;</i>12<span class="unit">/份</span></td>
+                            <td class="col-1">澳洲鲍鱼</td>
+                            <td class="col-2"><i class="icon iconfont">&#xe604;</i>139<span class="unit">/份</span></td>
                             <td class="col-3">
                                 <div class="goods-count-area">
                                     <span href="javascript:" class="minus" data-id="'+obj.gid+'"><i class="icon iconfont">&#xe6d0;</i></span>
