--- a/view/shopInfo.html
+++ b/view/shopInfo.html
@@ -28,7 +28,7 @@
     <!--主容器-->
     <div id="container" class="container-fluid">
         <div class="top-area">
-            <div class="shop-img-area">
+            <!-- <div class="shop-img-area">
                 <img class="shop-img" src="../image/20171008134732530.jpg" alt="" class="shop-img" />
             </div>
             <div class="shop-info">真味一家</div>
@@ -37,6 +37,8 @@
                     <i class="icon iconfont star">&#xe641;</i>
                     <i class="icon iconfont star">&#xe641;</i>
                     <i class="icon iconfont star">&#xe641;</i>
+
+
                     <i class="icon iconfont star">&#xe641;</i>
                     <i class="icon iconfont star">&#xe641;</i>
                     <i class="icon iconfont star">&#xe641;</i>
@@ -47,7 +49,23 @@
             <div class="left_money">
                 <i class="icon iconfont">&#xe6f5;</i> 店铺状态 <span class="text-success">在线中</span>
             </div>
-            <div class="send-time">配送时间：11:20-13:00，17:20-20:30</div>
+            <div class="send-time">配送时间：11:20-13:00，17:20-20:30</div> -->
+            <div class="shop-img-area">
+                <img class="shop-img" src="../image/20171008134732531.jpg" alt="私厨" />
+            </div>
+            <div class="shop-score-area">
+                <div class="star-area">
+                    <i class="icon iconfont star">&#xe641;</i>
+                    <i class="icon iconfont star">&#xe641;</i>
+                    <i class="icon iconfont star">&#xe641;</i>
+                    <i class="icon iconfont star">&#xe641;</i>
+                    <i class="icon iconfont star">&#xe641;</i>
+                    <i class="icon iconfont star">&#xe641;</i>
+                    <i class="icon iconfont star">&#xe641;</i>
+                </div>
+            </div>
+            <div class="shop-name">德怀恩·韦德</div>
+            <div class="shop-code">0010007</div>
         </div>
         <div class="dining-wrap" >
             <div class="banner-tap">
