--- a/view/shopList.html
+++ b/view/shopList.html
@@ -29,7 +29,7 @@
         <div class="top-item list "><span class="label-name">筛选</span><i class="select icon iconfont">&#xe7cb;</i></div>
     </div>
     <div class="search-area">
-        <input type="search" class="search-input" placeholder="请输入私厨或私房菜">
+        <input type="search" class="search-input" placeholder="请输入私厨代号或主菜关键词">
         <span class="search-btn"><i class="icon iconfont">&#xe607;</i></span>
     </div>
     <div class="label-area hidden">
