--- a/view/goodsDetail.html
+++ b/view/goodsDetail.html
@@ -14,10 +14,10 @@
     <link rel="stylesheet"  href="../css/iconfont.css">
     <link rel="stylesheet"  href="../css/common.css">
     <link rel="stylesheet"  href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/base.css?v=13456">
 
     <link rel="stylesheet"  href="../css/swiper.min.css">
-    <link rel="stylesheet"  href="../css/goodsDetail.css">
+    <link rel="stylesheet"  href="../css/goodsDetail.css?v=45646">
 </head>
 
 <body>
