--- a/view/index.html
+++ b/view/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet"  href="../css/iconfont.css">
     <link rel="stylesheet"  href="../css/common.css">
     <link rel="stylesheet"  href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/base.css?v=18465721">
 
     <link rel="stylesheet"  href="../css/swiper.min.css">
     <link rel="stylesheet"  href="../css/index.css">
